# NUCLEO_G474RE_FW_Study_1

./: .gitattributes  .gitignore  CMakeLists.txt  G474RE_GPIO_01.ioc  README.md
Src/: AppLed.cpp  AppLed.hpp  cpp_main.cpp  main.c  syscalls.c
Startup/: startup_stm32g474retx.s
